--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path: ^1.9.0
   lottie: ^3.3.1
   intl: ^0.20.2
+  font_awesome_flutter: ^10.8.0
  
 
 dev_dependencies:
@@ -71,6 +72,7 @@ flutter:
   assets:
      - assets/animations/car.json
      - assets/images/
+     - assets/images/Smart.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
