--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   lottie: ^3.3.1
   intl: ^0.20.2
   font_awesome_flutter: ^10.8.0
+  salomon_bottom_bar: ^3.3.2
  
 
 dev_dependencies:
@@ -71,6 +72,7 @@ flutter:
 
   assets:
      - assets/animations/car.json
+     - assets/animations/success.json
      - assets/images/
      - assets/images/Smart.jpg
 
